5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1716_2506.log
== TEST (2019-05-14 17:45:24) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
ano = 0
f = b/100
while 0 < a < 12000:
	c1 = a * f
	c1 = c1 - c
	ano += 1
if(a <=0):
	print("Extinsão")
else:
	print("Limite")
print(ano)
	
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:45:44) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
ano = 0
f = b/100
while 0 < a < 12000:
	c1 = a * f
	c1 = c1 - c
	ano += 1
	if(a <=0):
		print("Extinsão")
	else:
		print("Limite")
print(ano)
	
-- OUTPUT:
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
Limite
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:48:44) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(a <=0):
	print("Extinsão")
else:
	print("Limite")
print(ano)
	
-- EXECUTION TIME:
0.751823
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 11, in <module>
    if(a <=0):
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:48:47) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(a <=0):
	print("Extinsão")
else:
	print("Limite")
print(ano)
	
-- EXECUTION TIME:
0.697789
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 11, in <module>
    if(a <=0):
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:48:50) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(a <=0):
	print("Extinsão")
else:
	print("Limite")
print(ano)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    if(a <=0):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:08) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
	if(a <= 0):
	print("Extinsão")
else:
	print("Limite")
print(ano)
	
-- ERROR:
File "XXXX", line 12
    print("Extinsão")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:10) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
	if(a <= 0):
	print("Extinsão")
else:
	print("Limite")
print(ano)
	
-- ERROR:
File "XXXX", line 12
    print("Extinsão")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:23) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
	if(a <= 0):
		print("Extinsão")
	else:
		print("Limite")
print(ano)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    if(a <= 0):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:38) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(qnt <= 0):
	print("Extinsão")
else:
	print("Limite")
print(ano)
	
-- OUTPUT:
Extinsão
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:46) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(qnt <= 0):
	print("Extinsão")
else:
	print("Limite")
print(ano)
	
-- EXECUTION TIME:
0.675405
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 12, in <module>
    print("Extins\xe3o")
UnicodeEncodeError: 'ascii' codec can't encode character '\xe3' in position 6: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:50) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(qnt <= 0):
	print("Extinsão")
else:
	print("Limite")
print(ano)
	
-- OUTPUT:
Extinsão
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:50) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(qnt <= 0):
	print("Extinsão")
else:
	print("Limite")
print(ano)
	
-- EXECUTION TIME:
0.700922
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2506/main.py", line 12, in <module>
    print("Extins\xe3o")
UnicodeEncodeError: 'ascii' codec can't encode character '\xe3' in position 6: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:50:15) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(qnt <= 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(ano)
	
-- EXECUTION TIME:
0.661793
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
14
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:50:17) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(qnt <= 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(ano)
	
-- EXECUTION TIME:
0.847226
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:03:02) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
ano = 0
f = b/100
while 0 < a < 12000:
	c1 = a * f
	c1 = c1 - c
	ano += 1
if(a <=0):
	print("Extinsão")
else:
	print("Limite")
print(ano)
	
-- EXECUTION TIME:
1059.05
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:04:01) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
ano = 0
f = b/100
while 0 < a < 12000:
	c1 = a * f
	c1 = c1 - c
	ano += 1
if(a <=0):
	print("Extinsão")
else:
	print("Limite")
print(ano)
	
-- EXECUTION TIME:
1056.28
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:05:04) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
ano = 0
f = b/100
while 0 < a < 12000:
	c1 = a * f
	c1 = c1 - c
	ano += 1
	if(a <=0):
		print("Extinsão")
	else:
		print("Limite")
print(ano)
	
-- EXECUTION TIME:
1157.6
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 20:10:07) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(qnt <= 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(ano)
	
-- EXECUTION TIME:
0.173342
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:39:23) 
-- CODE:
qnt = int(input())
perc = float(input())
ret = float(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(qnt <= 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(ano)
	
-- EXECUTION TIME:
0.206373
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:39:53) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(qnt <= 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(ano)
	
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:40:34) 
-- CODE:
qnt = int(input())
perc = int(input())
ret = int(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(qnt <= 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(ano)
	
-- EXECUTION TIME:
0.143067
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:40:37) 
-- CODE:
qnt = int(input())
perc = int(input())
ret = int(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(qnt <= 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(ano)
	
-- EXECUTION TIME:
0.166538
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:40:38) 
-- CODE:
qnt = int(input())
perc = int(input())
ret = int(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(qnt <= 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(ano)
	
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:40:41) 
-- CODE:
qnt = int(input())
perc = int(input())
ret = int(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(qnt <= 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(ano)
	
-- EXECUTION TIME:
0.242375
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:40:48) 
-- CODE:
qnt = int(input())
perc = int(input())
ret = int(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(qnt <= 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(
	
-- EXECUTION TIME:
0.160245
-- ERROR:
  File "/home/codebench/codes/1716/2506/main.py", line 17
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:40:51) 
-- CODE:
qnt = int(input())
perc = int(input())
ret = int(input())
ano = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	ano += 1
if(qnt <= 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(ano)
	
-- EXECUTION TIME:
0.134058
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
